welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:25: error: not found: value tabCol
				setCouleurBrosse(tabCol(j))
                                                 ^